Fixed Spacing

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,6 @@ a {
 .projectLabel {
     position: relative;
     font-size: xx-large;
-    right: 
 }
 
 .projects {
